#ADD_SUBDIRECTORY(01_module)
#ADD_SUBDIRECTORY(02_module)
# STILL GARBAGE ADD_SUBDIRECTORY(03_module)
#ADD_SUBDIRECTORY(04_module)
#ADD_SUBDIRECTORY(05_module)
#ADD_SUBDIRECTORY(06_module)
# 67 ERRORS ADD_SUBDIRECTORY(07_module)
# 68 ADD_SUBDIRECTORY(08_module)
#ADD_SUBDIRECTORY(09_module)
# 1 ADD_SUBDIRECTORY(10_module)
#ADD_SUBDIRECTORY(11_module)
# 1 ADD_SUBDIRECTORY(12_module)